@@ -1,3 +1,7 @@
+2001-06-29  Laszlo Peter  <laca@ireland.sun.com>
+
+	* gconf/Makefile.am: Fix the marshaller rules to avoid looping.
+
 2001-06-20  Peter Williams  <peterw@ximian.com>
 
 	* configure.in (ACLOCAL): Save flags to aclocal -- life
